Bug 1381017 - Set NODE_DESCENDANTS_NEED_FRAMES from flatten tree parent. r=emilio,tnikkel

MozReview-Commit-ID: 3CBP8vc6OxB